# satoa

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml
cpp/: CMakeLists.txt  build.sh
cpp/satoa/: CMakeLists.txt  satoa.cpp  satoa.h
src/: main.cpp
src/satoa/: __init__.py
